sass/index.scss
@charset "utf-8";
@import "base";
@import "appcacheui";

html,body { width:100%; height:100%; margin:0px; border:none;}
iframe {
  position: absolute;
  left: 0px; right: 0px;
  top: 0px; bottom: 0px;
  border: none;
  margin: 0;
  width: 100%; height: 100%;
}
#wrapper {
  position: absolute;
  top: 44px; bottom: 0px;
  left: 0px; right: 0px;
}
#toolbar {
  position: absolute;
  height: 44px;
  width: 100%;
  top: 0px; left: 0px;
  /* from http://wiki.sugarlabs.org/go/Human_Interface_Guidelines */
  background: #404040; /* "toolbar grey" */
  overflow: hidden;
}

#toolbar .buttons {
  position: relative;
  margin-left: 10px;
  margin-top: 7px;
  white-space: nowrap;
}

#toolbar .swatch, #toolbar .icon {
  display: inline-block;
  margin-left: 5px;
  padding: 0;
}

#toolbar .icon {
  width: 30px;
  height: 30px;
  border: none;
  opacity: 0.9;
}
#toolbar .icon:hover {
  opacity: 1.0;
}
#toolbar .play {
  background: url('../icons/play.png');
}
#toolbar .play.playing {
  background: url('../icons/forward.png');
}
#toolbar .undo {
  background: url('../icons/undo.png');
}
#toolbar .redo {
  background: url('../icons/redo.png');
}
#toolbar .hard {
  background: url('../icons/hard.png');
}
#toolbar .soft {
  background: url('../icons/soft.png');
}
#toolbar .save {
  background: url('../icons/save.png');
}

#toolbar .hard, #toolbar .play, #toolbar .red, #toolbar input, #toolbar .save {
  margin-left: 10px;
}

#toolbar .swatch {
  width: 26px;
  height: 26px;
  border: 2px solid #a6a6a6;
  background: url('../icons/trans.png');
  background-position-x: 1px;
  background-position-y: 1px;
}
#toolbar .swatch:hover {
  border-color: #ddd;
}
#toolbar .swatch > span {
  display: block;
  width: 26px; height: 26px;
}
.swatch.red > span { background: red; }
.swatch.orange > span { background: orange; }
.swatch.yellow > span { background: yellow; }
.swatch.green > span { background: green; }
.swatch.blue > span { background: blue; }
.swatch.indigo > span { background: indigo; }
.swatch.violet > span { background: violet; }
.swatch.white > span { background: white; }
.swatch.brown > span { background: brown; }
.swatch.black > span { background: black; }

#loading { text-align:center; font-size: 30px; }

%maxed {
  display: block;
  position: absolute;
  top: 0; bottom: 0; right: 0; left: 0;
  content: "";
  background-repeat: no-repeat;
}
#splash {
  @extend %maxed;
  background-color: #8594FF; // original splash screen background was #85fdff
  background-image: image-url('colors_splash_clouds_landscape.svg');
  background-position: center center;
  @include background-size(contain);
  /* different cloud arrangement if we're in portrait */
  @media (orientation:portrait) {
    background-image: image-url('colors_splash_clouds_portrait.svg');
    @include background-size(cover);
  }
  &:before { /* paintbrush in center */
    @extend %maxed;
    background-image: image-url('colors_splash_center.svg');
    background-position: center center;
    @include background-size(contain);
  }
  &:after { /* princess at bottom */
    @extend %maxed;
    background-image: image-url('colors_splash_bottom.svg');
    background-position: right bottom;
    @include background-size(cover);
  }
}
/* animation properties (fade out splash screen) */
#splash {
  visibility: hidden;
  opacity: 0;
  @include transition(visibility 0s linear 0.5s, opacity 0.5s);
}
body.splash > #splash {
  visibility: visible;
  opacity: 1;
  @include transition-duration(0s);
  @include transition-delay(0s);
}

